--- a/volume_01/nbproject/project.properties
+++ b/volume_01/nbproject/project.properties
@@ -58,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=volume_01.Volume_01
+main.class=volume_01.volume_01
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
