--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ DATA_IMG.7z.tmp
 /volume_02F/build/
 /volume_pic/nbproject/private/
 /volume_pic/build/
+/volume_ct/nbproject/private/
+/volume_ct/build/
